Fixing line break in footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -127,11 +127,11 @@
 }
 
 .footer-col-1 {
-    width: 35%;
+    width: 30%;
 }
 
 .footer-col-2 {
-    width: 20%;
+    width: 25%;
 }
 
 .footer-col-3 {
